2000-03-27  Paul D. Smith  <psmith@gnu.org>

	* remake.c (start_updating, finish_updating, is_updating): Fix
	PR/1671; circular dependencies in double-colon rules are not
	diagnosed.  These macros set the updating flag in the root
	double-colon file instead of the current one, if it's part of a
	double-colon list.  This solution provided by Tim Magill
	<magill@gate.net>; I just changed the macro names :).
	(update_file_1): Call them.
	(check_dep): Call them.

	The change to not automatically evaluate the $(call ...)
	function's arguments breaks recursive use of call.  Although using
	$(if ...) and $(foreach ...) in $(call ...) macros is important,
	the error conditions generated are simply to obscure for me to
	feel comfortable with.  If a method is devised to get both
	working, we'll revisit.  For now, remove this change.

	* function.c (function_table): Turn on the expand bit for func_call.
	(func_call): Don't expand arguments for builtin functions; that
	will have already been done.

2000-03-26  Paul D. Smith  <psmith@gnu.org>

	* file.c (remove_intermediates): Never remove targets explicitly
	requested on the command-line by checking the cmd_target flag.
	Fixed PR/1669.

2000-03-23  Paul Eggert  <eggert@twinsun.com>

	* filedef.h (FILE_TIMESTAMP_STAT_MODTIME): Don't use
	st_mtim.tv_sec; this doesn't work on Unixware.

2000-03-18  Paul D. Smith  <psmith@gnu.org>

	* file.c (file_hash_enter): If we're trying to change a file into
	itself, just return.  We used to assert this wasn't true, but
	someone came up with a weird case involving archives.  After
	playing with it for a while I decided it was OK to ignore it.

	* default.c: Define COFLAGS to empty to avoid spurious warnings.

	* filedef.h: Change #if ST_MTIM_NSEC to #ifdef; this is a macro
	containing the name of the nsec field, not true/false.
	* make.h: Ditto.
	Reported by Marco Franzen <Marco.Franzen@Thyron.com>.

2000-03-08  Tim Magill  <magill@gate.net>
